휠클릭 오류 수정

--- a/src/practice.html
+++ b/src/practice.html
@@ -16,59 +16,17 @@
       margin: 0;
       background-color: #b1b1b1;
     }
-
-    .board {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      width: 100%;
-      height: 100%;
-      border: 3px solid yellow;
-    }
-
-    .board-container {
-      width: 780px;
-      border: 3px solid red;
-      height: 100px;
-    }
-
-    .cell {
-      width: 24px;
-      height: 24px;
-      background-image: linear-gradient(to bottom, #FFFFFF, #E4E4E4);
-      border-radius: 4px;
-      position: relative;
-      display: inline-block;
-    }
-
-    .cell:hover {
-      background-image: linear-gradient(to bottom, #dee6fc, #ffffff);
-    }
-
-    .cell:active {
-      background-image: linear-gradient(to bottom, #D4F4FA, #BDBDBD);
-    }
-
-    .cell div {
-      position: absolute;
-      text-align: center;
-      display: inline;
-      font-weight: bold;
-      font-size: 6px;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    
+    .test{
+      width:100%;
+      height:200px;
+      background-color:blueviolet;
     }
   </style>
 </head>
 
 <body>
-  <div class="board">
-    <div class='board-container'>
-    </div>
-  </div>
-
+  <div class='test'></div>
 </body>
 
 </html>
